feat: Configure project for static hosting and deployment
Update package.json, server.js, vercel.json, and add .htaccess to support static file serving and single-page application routing. This includes adjusting the server to serve from the root directory and configuring Vercel for optimal deployment. Also corrected a typo in MemberStatus and added a basic 404 redirect.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
 </head>
 <body class="bg-[#F8FAFC] text-slate-900">
     <div id="root"></div>
+    <!-- Punto de entrada de la aplicación -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
