--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tierra Esperanza - Gestión de Comité</title>
+    <title>Tierra Esperanza - Sistema de Gestión</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary: #047857;
+            --primary-dark: #064e3b;
+        }
         body { 
           font-family: 'Inter', sans-serif; 
-          scroll-behavior: smooth;
+          background-color: #f8fafc;
+          color: #0f172a;
+          overflow-x: hidden;
         }
-        /* Custom scrollbar for better aesthetics */
-        ::-webkit-scrollbar {
-          width: 8px;
+        .sidebar-glass {
+            background: rgba(15, 23, 42, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
-        ::-webkit-scrollbar-track {
-          background: #f1f5f9;
+        .card-shadow {
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
         }
-        ::-webkit-scrollbar-thumb {
-          background: #cbd5e1;
-          border-radius: 10px;
+        /* Animaciones suaves */
+        .page-transition {
+            animation: fadeIn 0.4s ease-out;
         }
-        ::-webkit-scrollbar-thumb:hover {
-          background: #94a3b8;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
-        .glass-panel {
-          background: rgba(255, 255, 255, 0.7);
-          backdrop-filter: blur(10px);
-          -webkit-backdrop-filter: blur(10px);
-        }
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-track { background: #f1f5f9; }
+        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
 <script type="importmap">
 {
@@ -46,7 +53,7 @@
 }
 </script>
 </head>
-<body class="bg-[#F8FAFC] text-slate-900">
+<body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
