feat: Externalize CSS and improve photo handling
Moves all inline CSS from index.html to a new style.css file for better organization.
Adds a "Remove Photo" functionality to the member management modal, allowing users to clear the selected profile picture.

--- a/index.html
+++ b/index.html
@@ -6,39 +6,7 @@
     <title>Tierra Esperanza - Sistema de Gestión</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary: #047857;
-            --primary-dark: #064e3b;
-        }
-        body { 
-          font-family: 'Inter', sans-serif; 
-          background-color: #f8fafc;
-          color: #0f172a;
-          overflow-x: hidden;
-        }
-        .sidebar-glass {
-            background: rgba(15, 23, 42, 0.95);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-        }
-        .card-shadow {
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
-        }
-        /* Animaciones suaves */
-        .page-transition {
-            animation: fadeIn 0.4s ease-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        /* Custom Scrollbar */
-        ::-webkit-scrollbar { width: 6px; }
-        ::-webkit-scrollbar-track { background: #f1f5f9; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
-        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 <script type="importmap">
 {
   "imports": {
